<resources>
    <string name="app_name">兼优</string>
    <string name="login">登录</string>
    <string name="password">密码</string>
    <string name="msg">消息</string>
    <string name="ID">账号</string>
    <string name="welconme">Welcome</string>
    <string name="register">忘记密码？| 立即注册</string>
    <string name="getnum">获取验证码</string>
    <string name="title_activity_school">SchoolActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="school">校内</string>
    <string name="society">校外</string>
    <string name="issue">发布</string>
    <string name="platform">论坛</string>
    <string name="my">我的</string>
    <string name="s001">热门话题</string>
    <string name="s002">校园论坛</string>
    <string name="s003">学校资讯</string>
    <string name="s004">学习辅导</string>
    <string name="s005">新手指南</string>
    <string name="s006">任务大厅</string>
    <string name="s007">跳蚤市场</string>
    <string name="words">有哪位大佬会Java的啊，有偿求辅导！救救孩子吧！o(╥﹏╥)o</string>
    <string name="words2">醉后不知天在水,满船清梦压星河</string>
    <string name="user1">一位扬州姑娘</string>
    <string name="user2">轻狂书生</string>
    <string name="attention">关注</string>
    <string name="dot">···</string>
    <string name="time1">10分钟前</string>
    <string name="s009">赞</string>
    <string name="s010">评论</string>
    <string name="s011">打赏</string>
    <string name="time2">刚刚</string>
    <string name="todo1">TODO</string>
    <string name="prompt">我的快乐源泉</string>
    <string name="label">更多标签</string>
    <string name="prompt2">选择合适的标签会有更多关注哦~&#160;&#160;&#160;＞</string>
    <string name="task">任务</string>
    <string name="post">帖子</string>
    <string name="todo">TODO</string>
    <string name="money">任务赏金</string>
    <string name="time">任务时间</string>
    <string name="task_details">任务详情</string>
    <string name="people">任务人数</string>
    <string name="label1">学习</string>
    <string name="label2">高数</string>
    <string name="label3">金融</string>
    <string name="label4">Java</string>
    <string name="label5">英语</string>
    <string name="label6">辅导</string>
    <string name="label7">跑腿</string>
    <string name="label8">实习</string>
    <string name="label9">充场</string>
    <string name="label10">其他</string>
    <string name="s012">＞</string>
    <string name="signature">"袅娜少女羞，岁月无忧愁  "</string>
    <string name="my_resume">我的简历</string>
    <string name="s013">完善简历提高您的录取率</string>
    <string name="s014">去完善</string>
    <string name="s015">我的报名</string>
    <string name="s016">已报名</string>
    <string name="s017">已录取</string>
    <string name="s018">已到岗</string>
    <string name="s019">已完成</string>
    <string name="s026">已发布</string>
    <string name="s020">我的收藏</string>
    <string name="s021">联系客服</string>
    <string name="s022">意见反馈</string>
    <string name="s023">工作邀约</string>
    <string name="s024">系统消息</string>
    <string name="s025">在线客服</string>
    <string name="s027">隐私政策</string>
    <string name="s028">关于我们</string>
    <string name="s029">任务详情</string>
    <string name="s030">联系雇主</string>
    <string name="s031">确认完成</string>
    <string name="s032">联系对方</string>
    <string name="s034">天天签到</string>
    <string name="s035">余额</string>
    <string name="s036">6.00</string>
    <string name="s037">完成率</string>
    <string name="s038">身份绑定</string>
    <string name="s039">我的消息</string>
    <string name="university">西南财经大学</string>
    <string name="grade">Lv10</string>
    <string name="num1">108</string>
    <string name="fans">粉丝</string>
    <string name="num2">10</string>
    <string name="dynamic">动态</string>
    <string name="num3">80%</string>
    <string name="prompt3">【兼职须知】兼职时必读的小知识</string>
    <string name="new_msg">最新消息</string>
    <string name="s033">任务一</string>
    <string name="task1_details">周六下午14：00-16：00请人补习高数...</string>
    <string name="price">60元</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
